# idc-competitive-intelligence

./: .env.example  .gitignore  ALL_FIXES_SUMMARY.md  FEATURES_SUMMARY.md  QUICK_FIX_REFERENCE.md  README.md  generate_weekly_report.py  pyproject.toml  requirements.txt  run_collection.py  start_scheduler.py  test_all_email_fixes.py  test_both_fixes.py  test_email_mime_structure.py  test_email_recipient_fix.py  test_email_with_pdf.py  test_pdf_emoji.py  test_pdf_generation.py  test_scheduler_command.sh  test_scheduler_demo.py  test_weekly_summary.py
.claude/: settings.local.json
config/: media-sources-template-22.json  media-sources.json  scheduler.ini
data/: intelligence.db.backup_20251106_074801
docs/: ADD_NEW_MEDIA.md  CLEANUP_SUMMARY.md  SCHEDULER_COMPATIBILITY_CHECK.md  SCHEDULER_STATUS.md  email-apple-mail-fix.md  fixes-2025-11-08.md  generate-weekly-report-usage.md  pdf-chinese-font-fix.md  pdf-generation-feature.md  troubleshooting.md  weekly-summary-feature.md
tests/: README.md  test_all_email_fixes.py  test_both_fixes.py  test_category_classifier.py  test_database.py  test_email_mime_structure.py  test_email_recipient_fix.py  test_email_with_pdf.py  test_idcquan_scraper.py  test_llm_analyzer.py  test_new_8_sources.py  test_pdf_emoji.py  test_pdf_generation.py  test_priority_scorer.py  test_report_generator.py  test_scheduler.py  test_weekly_summary.py
tmp/: 6_mainstream_analysis.json  8_sources_analysis_results.json  ADDED_2_SOURCES_SUMMARY.md  EXPANSION_SUMMARY.md  IDC_Weekly_Report_14Sources_2025_11_04.md  IDC_Weekly_Report_Complete_2025_11_04.md  (+43 more)
(+22 files in other folders)
